# docforge

./: .env.example  .gitignore  DEPLOY-VERCEL.md  DEPLOY.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: db96a8d4c528_initial_schema.py
backend/docforge/: __init__.py  ai_quota.py  cli.py  config.py  jobs.py  logging_setup.py  sampledata.py  settings_store.py
backend/docforge/ai/: __init__.py  client.py  pricing.py  prompts.py  tools.py  usage.py
backend/docforge/ai_classifier/: __init__.py  fields.py  heuristic.py  llm.py  service.py
backend/docforge/ai_router/: __init__.py  compose.py  document.py  llm.py  router.py  service.py
backend/docforge/api/: __init__.py  app.py  auth.py  deps.py  file_serving.py  schemas.py  serializers.py
backend/docforge/assembler/: __init__.py  assembler.py
backend/docforge/common/: __init__.py  textutil.py
backend/docforge/compliance/: __init__.py  checker.py  judge.py
backend/docforge/db/: __init__.py  base.py  models.py  session.py
backend/docforge/document_ingest/: __init__.py  service.py
backend/docforge/multi_doc_differ/: __init__.py  differ.py
backend/docforge/ooxml_extractor/: __init__.py  numbering.py  package.py  safety.py
backend/docforge/schemas/: __init__.py  classification.py  compliance.py  diff.py  enums.py  extraction.py  generation.py  routing.py  template.py  validation.py
backend/docforge/services/: __init__.py  account.py  analysis.py  audit.py  compliance.py  compliance_fix.py  generation.py  learning.py  pdf.py  preview_docx.py  publish.py  recovery.py  republish.py  retention.py  seed.py
backend/docforge/storage/: __init__.py  base.py  local.py  supabase.py
backend/docforge/structure_normalizer/: __init__.py  normalizer.py  text.py  walk.py
backend/docforge/template_builder/: __init__.py  builder.py  ooxml_ops.py
backend/docforge/template_registry/: __init__.py  registry.py
backend/docforge/validator/: __init__.py  validator.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_features.py  test_flows.py  test_robustness.py
backend/tests/snapshot/: test_snapshots.py
backend/tests/unit/: test_agentic.py  test_ai_quota.py  test_analysis_agent.py  test_classify.py  test_compliance_agent.py  test_diff.py  test_direct_upload.py  test_extraction.py  test_generation_agent.py  test_ingest.py  test_llm_paths.py  test_recovery_retention.py  test_storage.py  (+3 more)
(+51 files in other folders)
