[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docforge"
version = "0.6.0"
description = "AI-powered DOCX reverse-engineering and document assembly platform"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DocForge" }]

dependencies = [
    # Web / API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",   # multipart form uploads
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # Persistence
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    # Postgres driver for managed databases (Supabase). In base deps (not just the
    # `prod` extra) so platforms that install from pyproject — e.g. Vercel — get it
    # and SQLAlchemy can create the Postgres engine. Dev on SQLite simply ignores it.
    "psycopg2-binary>=2.9",

    # DOCX / OOXML
    "python-docx>=1.1",
    "docxtpl>=0.17",
    "lxml>=5.1",
    "Jinja2>=3.1",

    # Utilities
    "PyJWT[crypto]>=2.8",        # verify Supabase auth JWTs (HS256 + ES256/RS256 JWKS)
    "httpx>=0.27",               # OpenAI-compatible AI calls
    "python-dateutil>=2.9",      # robust date detection in the differ
    "Pillow>=10.2",              # image dimensions (optional, best-effort)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]
# Production extras (installed in the Docker image): a Postgres driver for the
# managed database (e.g. Supabase). Dev stays on SQLite and skips this.
prod = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
docforge = "docforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["docforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# E501: line length handled by formatter.
# UP042: `str, Enum` is intentional (broad compat; serialized via .value).
ignore = ["E501", "UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are meant to be called in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Query",
    "fastapi.Form",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = false
